resym_core/tests/snapshots/module_dumping__module_dumping_by_index_portable.snap
---
source: resym_core/tests/module_dumping.rs
expression: module_dump
---
using namespace std;
using PUWSTR_C = const wchar_t*;
using TP_CALLBACK_ENVIRON_V3 = _TP_CALLBACK_ENVIRON_V3;
uint64_t* (__local_stdio_scanf_options)(); // CodeSize=8
uint64_t _OptionsStorage;
void (__scrt_initialize_default_local_stdio_options)(); // CodeSize=69
